# offspring-python

./: .gitignore  Makefile  README.md  database.json  pyproject.toml
data/: combateers.pkl
data/card_modifiers/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
data/cards/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
data/enemies/: 1.pkl
data/item_modifiers/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
data/items/: 1.pkl  2.pkl
data/maps/: 1.pkl  2.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/assets/svg/: SVGBackground.tsx  SVGCard.tsx  SVGPaper.tsx
frontend/src/models/: Card.ts
frontend/src/utilities/: offspring.ts  theme.ts
frontend/src/views/: router.tsx
offspringengine/: __main__.py  expose.py
offspringengine/models/: card.py  character.py  dungeon.py  equipment.py  offspring_response.py  room.py
offspringengine/services/: cards.py  database.py  enemies.py  equipment.py  logger.py  mercenaries.py
offspringengine/state/: connection.py  dungeon_state.py  hub_state.py  inventory.py  world.py
offspringengine/views/: constants.py  ui_component.py  view_character_choose.py  view_dungeon_rewards.py  view_intro.py  view_main_menu.py  views.py
(+16 files in other folders)
